syntax = "proto3";

package chef.automate.domain.infra_proxy.request;
option go_package = "github.com/chef/automate/api/interservice/infra_proxy/request";

import "google/protobuf/struct.proto";

message SearchQuery {
	// The search query used to identify a list of items.
	string q = 1;
	// The number of result pages to return.
	int32 start = 2;
	// The number of results on each page.
	int32 rows = 3;
}

message Roles {
    // Chef organization ID.
    string org_id = 1;
    // Chef Infra Server ID.
    string server_id = 2;
    // Roles search query.
    SearchQuery search_query = 3;
}

message Role {
    // Chef organization ID.
    string org_id = 1;
    // Chef Infra Server ID.
    string server_id = 2;
    // Role name.
    string name = 3;
}

message CreateRole {
    // Chef organization ID.
    string org_id = 1;
    // Chef Infra Server ID.
    string server_id = 2;
    // Role name.
    string name = 3;
    // Role description.
    string description = 4;
    // Role default attributes JSON.
    google.protobuf.Struct default_attributes = 5;
    // Role override attributes JSON.
    google.protobuf.Struct override_attributes = 6;
    // Role run list.
    repeated string run_list = 7;
    // Environment based run list.
    repeated EnvRunList env_run_lists = 8;
}

message UpdateRole {
    // Chef organization ID.
    string org_id = 1;
    // Chef Infra Server ID.
    string server_id = 2;
    // Role name.
    string name = 3;
    // Role description.
    string description = 4;
    // Role default attributes JSON.
    google.protobuf.Struct default_attributes = 5;
    // Role override attributes JSON.
    google.protobuf.Struct override_attributes = 6;
    // Role run list.
    repeated string run_list = 7;
    // Environment based run list.
    repeated EnvRunList env_run_lists = 8;
}

message EnvRunList {
    // Environment name.
    string name = 1;
    // Role run list.
    repeated string run_list = 2;
}
